@@ -14,6 +14,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static com.example.demo.core.domain.FormasPagamentoEnum.QR_CODE_PAGBANK;
 import static com.example.demo.core.domain.StatusPagamento.PENDENTE;
@@ -49,14 +50,14 @@ public class PagarPedidoPagbankAdapter implements PagarPedidoAdapterPort {
         PagbankPagamentoRequest pagbankPagamentoRequest = new PagbankPagamentoRequest(
                 pagamento.getPedido().getCodReferenciaPedido(),
                 new Cliente("Shogun Lanches", "shogunlanches@gmail.com", "78026897000110"),
-                Arrays.asList(new Produto("Ordem de pedido Shogun Lanches", 1L, pagamento.getValorTotal().longValue())),
-                Arrays.asList(new QRCodeRequest(new Total(pagamento.getValorTotal().longValue()))),
-                Arrays.asList("http://a636f83638809472aba50bf00bc0cb16-1578186132.us-east-1.elb.amazonaws.com/v1/pagamento/webhook")
+                List.of(new Produto("Ordem de pedido Shogun Lanches", 1L, pagamento.getValorTotal().longValue())),
+                List.of(new QRCodeRequest(new Total(pagamento.getValorTotal().longValue()))),
+                List.of("http://a636f83638809472aba50bf00bc0cb16-1578186132.us-east-1.elb.amazonaws.com/v1/pagamento/webhook")
 
         );
         logger.info("m=criaRequestParaPagamento, status=success, msg=Request para o PagBank criado com sucesso, pagamento={}", pagamento);
         return pagbankPagamentoRequest;
     }
 
-    private Logger logger = LoggerFactory.getLogger(PagarPedidoPagbankAdapter.class);
+    private final Logger logger = LoggerFactory.getLogger(PagarPedidoPagbankAdapter.class);
 }
